--- a/app/src/main/res/layout/activity_ajouter.xml
+++ b/app/src/main/res/layout/activity_ajouter.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.geekloper.borrownote.AjouterActivity">
 
+    <Button
+        android:id="@+id/btn_schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/btn_schedule"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -50,6 +60,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="date"
+        android:text="12/12/2012"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
