--- a/app/src/main/res/layout/activity_ajouter.xml
+++ b/app/src/main/res/layout/activity_ajouter.xml
@@ -46,8 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/date"
         android:labelFor="@id/txt_date"
+        android:text="@string/date_emprunt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_nom_livre" />
 
